--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="calculator">
+            <div class="display">10</div>
+            <div class="buttons">
+                <button class="clear">clear</button>
+                <div class="numbers">
+                    <button>0</button>
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                </div>
+                <div class="operations">
+                    <button>/</button>
+                    <button>*</button>
+                    <button>-</button>
+                    <button>+</button>
+                    <button>=</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
     <script src="app.js"></script>
 </body>
 </html>
