--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
             <div class="buttons">
                 <button class="clear">clear</button>
                 <div class="numbers">
-                    <button>0</button>
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
+                    <button class="number" id="zero">0</button>
+                    <button class="number" id="one">1</button>
+                    <button class="number" id="two">2</button>
+                    <button class="number" id="three">3</button>
+                    <button class="number" id="four">4</button>
+                    <button class="number" id="five">5</button>
+                    <button class="number" id="six">6</button>
+                    <button class="number" id="seven">7</button>
+                    <button class="number" id="eight">8</button>
+                    <button class="number" id="nine">9</button>
                 </div>
-                <div class="operations">
-                    <button>/</button>
-                    <button>*</button>
-                    <button>-</button>
-                    <button>+</button>
-                    <button>=</button>
+                <div class="operators">
+                    <button class="divide">/</button>
+                    <button class="multiply">*</button>
+                    <button class="subtract">-</button>
+                    <button class="add">+</button>
+                    <button class="equal">=</button>
                 </div>
             </div>
         </div>
