Implementing multiple digits functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <div class="calculator">
             <div class="display">0</div>
             <div class="buttons">
-                <button class="clear">clear</button>
+                <button class="clear">AC</button>
+                <button>+/-</button>
+                <button>%</button>
                 <div class="numbers">
                     <button class="number" id="zero">0</button>
                     <button class="number" id="one">1</button>
